--- a/configs/repa_experiments_small_home/recursive_mnist_debug_small_v.yaml
+++ b/configs/repa_experiments_small_home/recursive_mnist_debug_small_v.yaml
@@ -6,36 +6,19 @@ model:
   grad_clip: 1.0
   precision: bf16
   grad_acc_steps: 1
-  target: models.second_stage.fm_recursive_images_sudist_reverse.ModelSR
+  target: models.second_stage.fm_recursive_images_debug.ModelSR
   params:
     # training
-    warmup_steps: 2000
+    warmup_steps: 500
     min_lr_multiplier: 0.1
     adjust_lr_to_batch_size: false
-    scheduler_config:
-      target: modules.mask_scheduler.UnconditionalMaskGITScheduler
-      params:
-        default_schedule_mode: arccos
-        default_schedule_mode_train: arccos
-        default_num_steps: 12
-        disable_bar: true
-        num_tokens: 81
-        max_block_size: 3
-        mask_value: -1
-        codebook_size: -1
-    time_sampler_cfg:
-      target: modules.mean_beta.MeanBeta
-      params:
-        scalar_time_sampler: uniform
-        name: mean_beta
-        beta_sharpness: 1.0
     # architecture
     enc_scale: 1
     add_projector: false
     add_norm: false
     ema_thoughts: false
     repr_loss_weight: 0.0
-    tnk_loss_weight: 1.0
+    tnk_loss_weight: 0.0
     loss_type: cos_sim
     ctx_noise_exp: 1.0
     future_noise_exp: 0.5
@@ -74,11 +57,16 @@ model:
         num_temporal_per_main: 0
         num_reg_tokens: 16
         causal_time_attn: false
-
+    time_sampler_cfg:
+      target: modules.mean_beta.MeanBeta
+      params:
+        scalar_time_sampler: uniform
+        name: mean_beta
+        beta_sharpness: 1.0
 data:
   target: data.datamodule.DataModuleFromConfig
   params:
-    batch_size: 128
+    batch_size: 16
     num_workers: 8
     shuffle_val: true
     train:
@@ -92,6 +80,7 @@ data:
         to_rgb: true
         allow_synthetic_if_missing: true
         test_samples_num: 0 
+        subset_size: 100
     validation:
       target: data.mnist_sudoku.MnistSudokuGridDataset
       params:
@@ -103,3 +92,4 @@ data:
         to_rgb: true
         allow_synthetic_if_missing: true
         test_samples_num: 0 
+        subset_size: 100
