--- a/configs/repa_experiments_small_home/r_mnist_xs_x_kl_tnk.yaml
+++ b/configs/repa_experiments_small_home/r_mnist_xs_x_kl_tnk.yaml
@@ -6,7 +6,7 @@ model:
   grad_clip: 1.0
   precision: bf16
   grad_acc_steps: 1
-  target: models.second_stage.fm_recursive_images_debug.ModelSR
+  target: models.second_stage.fm_recursive_images_x.ModelSR
   params:
     # training
     warmup_steps: 500
@@ -16,38 +16,39 @@ model:
     enc_scale: 1
     add_projector: false
     add_norm: false
+    kl_weight: 1.0
     ema_thoughts: false
     repr_loss_weight: 0.0
-    tnk_loss_weight: 0.0
-    loss_type: cos_sim
+    tnk_loss_weight: 0.1
+    loss_type: None
     ctx_noise_exp: 1.0
-    future_noise_exp: 0.5
+    future_noise_exp: 1.0
     # frame layout (single-frame generation)
     num_ctx_frames: 0
     num_pred_frames: 1
-    num_thinking_frames: 0
-    num_thinking_steps: 0
+    num_thinking_frames: 1
+    num_thinking_steps: 16
     # second-stage patching: 28x28 → 9x9 tokens on 252x252 grids
     max_patch_size_second_stage:
-      - 28
-      - 28
+      - 1
+      - 1
     tokenizer_config:
       # Pseudo-tokenizer trained with 28x28 patchifying first stage (VQGAN)
-      folder: $TK_WORK_DIR/pseudo_tok_mnist_patch28
+      folder: $TK_WORK_DIR/mnist_patch14
       ckpt_path: #checkpoints/last.ckpt
     generator_config:
       target: networks.DiT.recursive_dit_t.RecursiveDiT
       params:
         max_num_frames: 81
-        hidden_size: 1152
-        depth: 32
+        hidden_size: 864
+        depth: 64
         num_heads: 16
         mlp_ratio: 4
-        patch_size: 28
+        patch_size: 1
         input_size:
-          - 252
-          - 252
-        in_channels: 1
+          - 9
+          - 9
+        in_channels: 196
         dropout: 0.0
         drop_ctx_rate: 0.0
         ctx_noise_aug_prob: 0.0
@@ -57,6 +58,7 @@ model:
         num_temporal_per_main: 0
         num_reg_tokens: 16
         causal_time_attn: false
+        inner_depth: 4
     time_sampler_cfg:
       target: modules.mean_beta.MeanBeta
       params:
@@ -66,7 +68,7 @@ model:
 data:
   target: data.datamodule.DataModuleFromConfig
   params:
-    batch_size: 64
+    batch_size: 128 
     num_workers: 8
     shuffle_val: true
     train:
@@ -75,13 +77,13 @@ data:
         root: ./data/mnist_sudoku
         split: train
         image_size:
-          - 252
-          - 252
+          - 126
+          - 126
         to_rgb: true
         allow_synthetic_if_missing: true
         test_samples_num: 0 
-        subset_size: 10
-        repeat_factor: 10000
+        subset_size: 10000
+        repeat_factor: 10
 
     validation:
       target: data.mnist_sudoku.MnistSudokuGridDataset
@@ -89,10 +91,10 @@ data:
         root: ./data/mnist_sudoku
         split: val
         image_size:
-          - 252
-          - 252
+          - 126
+          - 126
         to_rgb: true
         allow_synthetic_if_missing: true
         test_samples_num: 0 
-        subset_size: 10
-        repeat_factor: 10000
+        subset_size: 10000
+        repeat_factor: 10
